@@ -2285,6 +2285,28 @@ setRlibs <-
 
     check_src_dir <- function(desc)
     {
+        ## Added in R 3.5.0: check line endings for shell scripts:
+        ## for Unix CRLF line endings are fatal but these are not used
+        ## on Windows and hence this is not detected.
+        ## Packages could have arbitrary scripts, so we could
+        ## extend this to look for scripts at top level or elsewhere.
+        scripts <- dir(".", pattern = "^(configure|configure.in|configure.ac|cleanup)$")
+        if(length(scripts)) {
+            checkingLog(Log, "line endings in shell scripts")
+            bad_files <- character()
+            for(f in scripts) {
+                contents <- readChar(f, file.size(f), useBytes = TRUE)
+                if (grepl("\r", contents, fixed = TRUE, useBytes = TRUE))
+                    bad_files <- c(bad_files, f)
+            }
+            if (length(bad_files)) {
+                warningLog(Log, "Found the following shell scripts with CR or CRLF line endings:")
+                printLog0(Log, .format_lines_with_indent(bad_files), "\n")
+                printLog(Log, "Non-Windows OSes require LF line endings.\n")
+            } else resultLog(Log, "OK")
+       }
+
+
         ## Check C/C++/Fortran sources/headers for CRLF line endings.
         ## <FIXME>
         ## Does ISO C really require LF line endings?  (Reference?)
